--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,7 @@ body {
 header {
     /*padding-top: 49px;*/
     height: 157px;
-    background: url("images/logo.png") center top no-repeat;
+    background: url("images/ic_launcher.png") center top no-repeat;
 }
 
 #buttons a:first-child {
@@ -17,6 +17,6 @@ header {
 	header {
 	    margin-top: 200px;
 	    height: 157px;
-	    background-image: url("images/logo.png");
+	    background-image: url("images/ic_launcher.png");
 	}
 }
